--- a/Limonium submodel.Rmd
+++ b/Limonium submodel.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "LIMONIUM SUBMODEL"
 output: html_document
 ---
 
@@ -7,86 +7,11 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#Functions needed to run:
-```{r fullmodel-fit-indices}
-MLX2<-function(submodels,saturated.submodels,data){
-  #submodels is a list containing the submodels in your model
-  # in the form of linear, generalized linear, generalized additive
-  # mixed models, or any other model object that has AIC and
-  #log-likelihood attributes.
-  #saturated.submodels is a list containing the submodels of your
-  # model that defines the saturated submodels (or otherwise)
-  #into which your model is properly nested.
-  #data is the data set
-  #
-  #number of submodels in full model
-  nobs<-dim(data)[1]
-  nsub<-length(submodels)
-  error.mes1<-error.mes2<-rep(FALSE,nsub)
-  #if there is an error in estimating a model, then error.mes==TRUE
-  #and don't calculate statistics
-  for(i in 1:nsub){
-    #check if the submodels and the saturated submodels are
-    #of the same class, and stop if not.
-    stopifnot(class(submodels[[i]])==
-                class(saturated.submodels[[i]]))
-    if(all(class(submodels[[i]])=="lm")){
-      error.mes1[i]<-error.mes2[i]<-FALSE
-    }
-    else{
-      error.mes1[i]<-!submodels[[i]]$converged & submodels[[i]]$boundary
-      error.mes2[i]<-!saturated.submodels[[i]]$converged & saturated.submodels[[i]]$boundary
-    }}
-  out<-data.frame(submodel=1:nsub,logLikelihoods=rep(NA,nsub),
-                  k=rep(NA,nsub),AICs=rep(NA,nsub),n.free.parameters=
-                    rep(NA,nsub))
-  out.saturated<-data.frame(submodel=1:nsub,logLikelihoods=rep(NA,nsub),
-                            k=rep(NA,nsub),AICs=rep(NA,nsub),
-                            n.free.parameters=rep(NA,nsub))
-  
-  #get likelihoods, AIC & k and store in "out"
-  for(i in 1:nsub){
-    out$logLikelihoods[i]<-logLik(submodels[[i]])
-    out$AICs[i]<-AIC(submodels[[i]])
-    out$k[i]<-nobs-df.residual(submodels[[i]])
-    out$n.free.parameters[i]<-attributes(logLik(submodels[[i]]))$df
-    out.saturated$n.free.parameters[i]<-attributes(logLik(saturated.submodels[[i]]))$df
-        out.saturated$logLikelihoods[i]<-logLik(saturated.submodels[[i]])
-    out.saturated$AICs[i]<-AIC(saturated.submodels[[i]])
-    out.saturated$k[i]<-nobs-df.residual(saturated.submodels[[i]])
-  }
-  #Overall k, AIC and likelihood for models:
-  model.AIC<-sum(out$AIC)
-  model.LL<-sum(out$logLikelihoods)
-#model df is the difference in the # of free parameters in the
-#less constrained model relative to the # of free parameters in the
-# more constrained (nested) model
-  model.df<-sum(out.saturated$n.free.parameters)-
-    sum(out$n.free.parameters)
-  n.free.parameters<-sum(out$n.free.parameters)
-  n.saturated.free.parameters<-sum(out.saturated$n.free.parameters)
-  saturated.model.AIC<-sum(out.saturated$AIC)
-  saturated.model.LL<-sum(out.saturated$logLikelihoods)
-  saturated.model.df<-sum(out.saturated$k)
-# the MLX2 statistic is the difference in likelihoods between the
-#more constrained (nested) model and the less constrained model;
-#usually the saturated model
-  X2<--2*(model.LL-saturated.model.LL)
-  if(X2<0)X2<-NA
-#  df<-saturated.model.df-model.df
-  null.prob<-NA
-#Only calculate null prob if the X2 is valid with valid df
-  if(!is.na(X2)&(model.df>0))null.prob<-1-pchisq(X2,model.df)
-  #check if any models had errors in estimation
-  error.flag<-sum(error.mes1)+sum(error.mes2)
-  list(model.X2=X2,model.df=model.df,null.prob=null.prob,
-       model.loglikelihood=model.LL,
-       n.free.parameters=n.free.parameters,
-       n.free.parameters.saturated=n.saturated.free.parameters,
-       saturated.model.loglikelihood=saturated.model.LL,
-       model.AIC=model.AIC,submodels=submodels,error.flag=error.flag)
-}
-```
+#TITLE: Limonium submodel script
+#AUTHOR: Jacob Simon
+#CONTACT: jts30437@uga.edu
+#LAST UPDATED: 02/02/2022
+
 #Function for calculating effective sample size from Moran's I and actual sample size
 ```{r effective-sample-size}
 N.eff<-function(I,N){ #input values: Moran's I estimate, variable sample size
@@ -424,9 +349,9 @@ for (j in 1:length(Pcoef_names)) {
 
 #LIMONIUM submodel
 ```{r data-read-in}
-#file name is computer specific
+#this load method is relative to the working directory - adjust your files as needed
 preCNNdata<-read.csv("2014_plants_snail_xy_data.csv")
-  preCNNdata<-na.omit(CNNdata)
+  preCNNdata<-na.omit(preCNNdata)
 ```
 #read in revised data and replace values
 ```{r}
@@ -550,9 +475,9 @@ P.limo.Moran<-moran.test(P.resid,nb2listw(Pxy.nb,style ="W"))
 
 #compute adjusted sample size, standard errors and p values
 ```{r}
-PAlimoNeff<-as.numeric(N.eff(PA.limo.Moran$estimate[1],length(limo.hab[,1]))) #calculate n' for each model
+PAlimoNeff<-as.numeric(N.eff(PA.limo.Moran$estimate[1],length(limo.hab[,1]))) #calculate n' for each model using function written above
 PlimoNeff<-as.numeric(N.eff(P.limo.Moran$estimate[1],length(limo.habY[,1])))
-
+#n' values added to column 3 & 4 of Table 2
 
 mod.adjuster(limoPAmod1,PAlimoNeff) #adjust each model and print values
 mod.adjuster(limoPmod1,PlimoNeff)
@@ -581,6 +506,7 @@ limoR2adj<-summary(limoFmod)$adj.r.squared
 ```
 #calculate R2 and standardize coefficients
 ```{r}
-limo_coef<-range.std.coef(limoPAmod1,limoPmod3,CNNdata)
+limo_coef<-range.std.coef(limoPAmod1,limoPmod3,CNNdata)#calculate final range standardized coefficients
+print(limo_coef)
 ```
 
